# semantic-guess-solver

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  TECHNICAL.md  TECHNICAL.zh-CN.md  TECHNICAL_DAILY_v0.8.0.md  TECHNICAL_DAILY_v0.8.0.zh-CN.md  TUTORIAL.md  pyproject.toml
data/: .gitkeep
references/: xiaoce-fun-case-study.md
replay/: example-376634286041-phase1.ndjson  example-376634286041-phase3.ndjson
sgs/: __init__.py  daily_solve.py  flock.py  krr.py  learn.py  oracle.py  probe.py  py.typed  rank.py  ratelimit.py  replay.py  replay_diff.py  round1.py  solve.py
sgs/wire/: __init__.py  base.py  http.py  playwright.py
tests/: __init__.py  test_daily_solve.py  test_flock.py  test_krr.py  test_learn.py  test_oracle.py  test_probe.py  test_rank.py  test_ratelimit.py  test_replay.py  test_replay_diff.py  test_round1.py  test_solve.py  test_wire_base.py  test_wire_http.py  test_wire_playwright.py
tests/integration/: test_oracle_live.py  test_skip_guard.py
